--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ReLive</string>
+    <string name="channel_name">RELIVE</string>
+    <string name="channel_description">description</string>
 </resources>
